--- a/test.html
+++ b/test.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="test2.css">
-    <link rel="stylesheet" href="test2mobile.css">
+    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="testmobile.css">
 </head>
 <body>
     <div class="test"></div>
