--- a/test.html
+++ b/test.html
@@ -1,27 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="test.css">
     <link rel="stylesheet" href="testmobile.css">
+    <script type="text/javascript" src="test.js"></script>
 </head>
 <body>
-    <div class="test"></div>
+   <div class="test1"><h1>photo gallery</h1></div>
     <div class="test2">
-        <div class="img-box"></div>
+        <div class="img-box" id="album"><img  src="img14.jpg"></div>
+        <div class="img-box2" id="album2"><img src="img11.jpg"></div>
+        <div class="img-box3" id="album3"><img  src="img3.jpg"></div>
+        <div class="img-box4" id="album4"><img src="img10.jpg"></div>
     </div>
-    <div class="test3"></div>
-    
-    
-
-
 </body>
-<script>
 
 
 
-</script>
 </html>
