コードを簡略化しました

--- a/test.html
+++ b/test.html
@@ -11,9 +11,9 @@
    <div class="test1"><h1>photo gallery</h1></div>
     <div class="test2">
         <div class="img-box" id="album"><img  src="img14.jpg"></div>
-        <div class="img-box2" id="album2"><img src="img11.jpg"></div>
-        <div class="img-box3" id="album3"><img  src="img3.jpg"></div>
-        <div class="img-box4" id="album4"><img src="img10.jpg"></div>
+        <div class="img-box" id="album2"><img src="img11.jpg"></div>
+        <div class="img-box" id="album3"><img  src="img3.jpg"></div>
+        <div class="img-box" id="album4"><img src="img10.jpg"></div>
     </div>
 </body>
 
