--- a/test5.html
+++ b/test5.html
@@ -14,7 +14,7 @@
         <div class="samurai-image-box">
         <div class="samurai-image">
             <img src="publicdomainq-0003313dwn.jpg">
-            <div class="mask">
+            <div class="mask"><!--hoverで出す説明文用のクラス  -->
                 <div class="caption">・織田信長<br>織田 信長（おだ のぶなが、天文3年5月12日〈1534年6月23日〉 - 天正10年6月2日〈1582年6月21日〉）は、日本の戦国時代から安土桃山時代にかけての武将、戦国大名。三英傑の一人。
 
                     尾張国（現在の愛知県）の織田信秀の嫡男。家督争いの混乱を収めた後に、桶狭間の戦いで今川義元を討ち取り、勢力を拡大した。足利義昭を奉じて上洛し、後には義昭を追放することで、畿内を中心に独自の中央政権（「織田政権」[注釈 4]）を確立して天下人となった。しかし天正10年6月2日（1582年6月21日）、重臣・明智光秀に謀反を起こされ、本能寺で自害した。
@@ -24,7 +24,7 @@
         </div>
         <div class="samurai-image2">
             <img src="publicdomainq-0001496saa.jpg">
-            <div class="mask2">
+            <div class="mask2"><!--hoverで出す説明文用のクラス  -->
                 <div class="caption2">・徳川家康<br>徳川 家康（とくがわ いえやす、旧字体：德川 家康）は、戦国時代から江戸時代初期にかけての武将・戦国大名[3]・天下人[5]。安祥松平家9代当主で徳川家や徳川将軍家、御三家の始祖。旧称は松平 元康（まつだいら もとやす）。豊臣秀吉の死後に引き起こした関ヶ原の戦いに勝利し、豊臣勢力を圧迫しつつ1615年には大坂夏の陣により豊臣氏を滅し、265年間続く江戸幕府を開いた[3]。三英傑のひとり。<br>家系は三河国の国人土豪・松平氏。幼名は竹千代[3]。通称は次郎三郎のちに蔵人佐。諱は今川義元より偏諱を受けて元信（もとのぶ）次いで元康と名乗るが、今川氏から独立した際に家康と改める。
 
                     近衛家に系図作成を依頼し、勅許の上、永禄9年12月29日（1567年2月18日）に徳川氏に改姓。本姓は源氏や藤原氏を称し、豊臣政権では豊臣氏を称した形跡もあるが、天正16年（1588年）以降に源氏を再び称している[6]。
