--- a/test.html
+++ b/test.html
@@ -6,17 +6,18 @@
     <link rel="stylesheet" href="test.css">
     <link rel="stylesheet" href="testmobile.css">
     <script type="text/javascript" src="test.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
    <div class="test1"><h1>photo gallery</h1></div>
     <div class="test2">
         <div class="img-box" id="album"><img  src="img14.jpg"></div>
         <div class="img-box" id="album2"><img src="img11.jpg"></div>
-        <div class="img-box" id="album3"><img  src="img3.jpg"></div>
-        <div class="img-box" id="album4"><img src="img10.jpg"></div>
+        
+
     </div>
 </body>
-
+$
 
 
 </html>
