--- a/test.html
+++ b/test.html
@@ -10,6 +10,7 @@
 </head>
 <body>
    <div class="test1"><h1>photo gallery</h1></div>
+   <!-- 写真は同時に2枚に変更 -->
     <div class="test2">
         <div class="img-box" id="album"><img  src="img14.jpg"></div>
         <div class="img-box" id="album2"><img src="img11.jpg"></div>
