--- a/test4.html
+++ b/test4.html
@@ -49,9 +49,9 @@
     function timeCountFinish(){
         timer.innerHTML="終了です"
     }
-    setTimeout(timeCount,1000);
-    setTimeout(timeCount2,2000);
-    setTimeout(timeCount3,3000);
+    setTimeout(timeCount,1000);//1秒後にtimeCount関数を実行
+    setTimeout(timeCount2,2000);//2秒後にtimeCount2関数を実行
+    setTimeout(timeCount3,3000);//3秒後にtimeCount3関数を実行
     setTimeout(timeCount4,4000);
     setTimeout(timeCount5,5000);
     setTimeout(timeCount6,6000);
