霊感診断　完成

--- a/JS.html
+++ b/JS.html
@@ -31,7 +31,7 @@ const close=document.getElementById("close-btn");
 open.addEventListener("click", function() {  
   
  dialog.show();
- dialog.style.background= 'skyblue';//色を挿入
+ dialog.style.background= 'skyblue';//クリックしたときに背景色をスカイブルーにする
   
 }, false);
 close.addEventListener("click", function() { 
