家計試算表、予算項目変更

--- a/JS.html
+++ b/JS.html
@@ -41,5 +41,8 @@ close.addEventListener("click", function() {
  }, false);
 
 
-
+function reset(){
+  location.reload();//ページをリロード
+}
+setTimeout(reset,20000);//20秒後にページをリロードする
 </script>
