--- a/test6.html
+++ b/test6.html
@@ -37,7 +37,35 @@
 </html>
 <script>
  const choice=document.querySelector("select");
- const text=document.getElementById("text-contents");
+ const text=document.getElementById("text-contents");//id text-contentsから情報を取得
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
+
  choice.addEventListener("change",selectData);//selectの値が変化したときに、selectData関数を実行
     function selectData(){
           const option=choice.value;
