詳細① ,② 微調整後

--- a/detail-version1.html
+++ b/detail-version1.html
@@ -52,6 +52,7 @@
 <script>
 $(".detail-open-btn").click(function(){
     $(".detail-open-btn").hide()
+    $(".bokashi").hide()
     $(".detail-section").fadeIn(2000)
     
 
@@ -59,6 +60,7 @@ $(".detail-open-btn").click(function(){
 $(".detail-close-btn").click(function(){
     $(".detail-section").hide()
     $(".detail-open-btn").show()
+    $(".bokashi").show()
    
 
 })
