--- a/detail-version1.html
+++ b/detail-version1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
     <title>Document</title>
     <link rel="stylesheet" href="test10.css">
     <link rel="stylesheet" href="test10mobile.css">
@@ -85,11 +85,12 @@
         </div> 
   
 
-    <div class="photo">
+        <div class="photo">
      
-    </div>
+           </div>
     
-</div> 
+    </div> 
+<body>
 <div class="add-contents">
     <div class="contents-box">
       <a href="mailto:lucky.bicky.island@gmail.com" target="_blank" rel="noopener noreferrer"><img src="bicky.png" class="contents" ></a> 
