リンク埋め込み

--- a/detail-version1.html
+++ b/detail-version1.html
@@ -70,7 +70,7 @@
                     <br>
                 　<br>箏を5歳より祖母、星野文伸加より手ほどきを受け、人間国宝、二代目米川文子に師事。NHK Eテレ　にっぽんの芸能に出演。 現在、東京音楽大学にて現代箏曲を滝田美智子氏に師事。
                 <br>
-                  <br>2020年度学習院高等科管弦楽、およびコーラス部、リコーダー部、大合同オーケストラで、オリンピックを題材にしたメドレーを編曲及び指揮したことをきっかけに、編曲活動を開始。現在piascore (https://store.piascore.com)で発売をはじめている。
+                  <br>2020年度学習院高等科管弦楽、およびコーラス部、リコーダー部、大合同オーケストラで、オリンピックを題材にしたメドレーを編曲及び指揮したことをきっかけに、編曲活動を開始。現在<a  href="https://store.piascore.com/search?i=&n=%E6%98%9F%E9%87%8E%E9%9F%BF" id="piascore">piascore </a>で発売をはじめている。
                 <br>
                   <br>近年のコロナ禍をきっかけにyoutube チャンネル　bicky music studioを開始。jpopをはじめとしてクラシック、邦楽の垣根のない幅広い音楽を身近に感じてもらえるような活動をしたいと考えている。
                 <br>
