--- a/detail-version1.html
+++ b/detail-version1.html
@@ -64,17 +64,17 @@
         <div class="detail-section">
             <a>　東京都出身。5歳よりピアノ、ヴァイオリン、箏をはじめる。
 
-                　<br>第7回東京国際ピアノコンクール第1位。第6回バッハコンクール中学生B部門において銀賞。第1回全日本ピアノコンクール入賞。第30回日本クラシック音楽コンクール第5位など。これまでに菅谷京子、秋山徹也、金井玲子、迫昭嘉、御邊典一に、ソルフェージュを山中千佳子、秋山徹也に師事。 過去にヴァイオリン・チェロなど弦楽器、声楽およびフルート・ファゴット・ホルンなど管楽器のコンクールやコンサートでの伴奏を担当したほか、合唱の伴奏や、入学式・卒業式、結婚式、就任パーティーなど式典でのピアノ演奏、伴奏活動も意欲的に行ってきてきる。 現在東京音楽大学ピアノ演奏家コース1年在学中。
+                　<br>第7回東京国際ピアノコンクール第1位。第6回バッハコンクール中学生<br class="br-point">B部門において銀賞。第1回全日本ピアノコンクール入賞。<br class="br-point">第30回日本クラシック音楽コンクール第5位など。これまでに菅谷京子<br class="br-point">秋山徹也、金井玲子、迫昭嘉、御邊典一に、ソルフェージュを山中千佳子<br class="br-point">秋山徹也に師事。 過去にヴァイオリン・チェロなど弦楽器、声楽および<br class="br-point">フルート・ファゴット・ホルンなど管楽器のコンクールやコンサートでの<br class="br-point">伴奏を担当したほか、合唱の伴奏や、入学式・卒業式、結婚式就任パーテ<br class="br-point">ィーなど式典でのピアノ演奏、伴奏活動も意欲的に行ってきている。<br class="br-point"> 現在東京音楽大学ピアノ演奏家コース1年在学中。
                  <br>
-                　<br>ヴァイオリンは5歳より宮沢香代子氏に師事。アンサンブル活動としてはみなとジュニアアンサンブル、アプリコアカデミーオーケストラ、学習院中高時代は弦楽同好会、ジュニアオーケストラ、ユースフィルハーモニックにてピアノ伴奏、ヴァイオリン、ヴィオラを担当。現在は東京音大1年オーケストラ、早稲田大学フィルハーモニー管絃楽団メンバー。目白フィルハーモニー管弦楽団などにも参加。
+                　<br >ヴァイオリンは5歳より宮沢香代子氏に師事。アンサンブル活動としては<br class="br-point">みなとジュニアアンサンブル、アプリコアカデミーオーケストラ学習院<br class="br-point">中高時代は弦楽同好会、ジュニアオーケストラユースフィルハーモニック<br class="br-point">にてピアノ伴奏、ヴァイオリン、ヴィオラを担当。現在は東京音大1年オーケ<br class="br-point">ストラ、早稲田大学フィルハーモニー管絃楽団メンバー。目白フィルハー<br class="br-point">モニー管弦楽団などにも参加。
                     <br>
-                　<br>箏を5歳より祖母、星野文伸加より手ほどきを受け、人間国宝、二代目米川文子に師事。NHK Eテレ　にっぽんの芸能に出演。 現在、東京音楽大学にて現代箏曲を滝田美智子氏に師事。
+                　<br >箏を5歳より祖母、星野文伸加より手ほどきを受け、人間国宝二代目米川<br class="br-point">文子に師事。NHK Eテレにっぽんの芸能に出演。現在、東京音楽大学<br class="br-point">にて現代箏曲を滝田美智子氏に師事。
                 <br>
-                  <br>2020年度学習院高等科管弦楽、およびコーラス部、リコーダー部、大合同オーケストラで、オリンピックを題材にしたメドレーを編曲及び指揮したことをきっかけに、編曲活動を開始。現在<a  href="https://store.piascore.com/search?i=&n=%E6%98%9F%E9%87%8E%E9%9F%BF" id="piascore">piascore </a>で発売をはじめている。
+                  <br>2020年度学習院高等科管弦楽、およびコーラス部、リコーダー部<br>大合同オーケストラで、オリンピックを題材にしたメドレーを編曲及び<br>指揮したことをきっかけに、編曲活動を開始。<br class="br-point">現在<a  href="https://store.piascore.com/search?i=&n=%E6%98%9F%E9%87%8E%E9%9F%BF" id="piascore">piascore </a>で発売をはじめている。
                 <br>
-                  <br>近年のコロナ禍をきっかけにyoutube チャンネル　bicky music studioを開始。jpopをはじめとしてクラシック、邦楽の垣根のない幅広い音楽を身近に感じてもらえるような活動をしたいと考えている。
+                  <br>コロナ禍をきっかけにyoutubeチャンネルbickymusicstudioを開始。<br class="br-point">jpopをはじめとしてクラシック、邦楽の垣根のない幅広い<Br class="br-point">音楽を身近に感じてもらえるような活動をしたいと考えている。
                 <br>
-                  　<br>2021年には音楽団体「音楽修員」を立ち上げ、代表となる。2021年8月10日に豊洲シビックセンターホールで第1回演奏会を企画、開催。
+                  　<br>2021年には音楽団体「音楽修員」を立ち上げ、代表となる。<br class="br-point">2021年8月10日に豊洲シビックセンターホールで第1回演奏会を企画、開催。
                 <br>
                   　<br>第2回演奏会を2022年8月12日に豊洲シビックセンターホールにて開催予定
                 </a>
